# media_rag_pipeline

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  qdrant_config.yaml
data/transcripts/: sample.txt
docs/: ARCHITECTURE.md  DEEPGRAM_TRANSCRIPTION.md  LLM_ANALYZER_SERVICE.md  NER_SERVICE.md  OPENAI_EMBEDDINGS_SETUP.md  OPINION_DETECTOR_SERVICE.md  PIPELINE_GUIDE.md  QDRANT_LOCAL_SETUP.md  README.md  UV_PYTHON_SETUP.md
docs/plans/: MVP_PHASE1.md
services/llm-analyzer/: Dockerfile
services/llm-analyzer/app/: db.py  main.py  prompts.py  schemas.py
services/ner/: Dockerfile  README.md
services/ner/app/: main.py
services/opinion-detector/: Dockerfile
services/opinion-detector/app/: db.py  main.py  schemas.py
src/: ingest.py  query.py  transcribe.py
